# repo-lens

./: README.md  pyproject.toml
src/repolens/: __init__.py  __main__.py
src/repolens/cli/: app.py
src/repolens/core/: models.py  scanner.py
src/repolens/formatters/: text.py
tests/: test_cli.py  test_scan.py
tests/fixtures/sample_repo/: README.md
tests/fixtures/sample_repo/tests/: test_main.py
