[project]
name = "repo-lens"
version = "0.1.0"
description = "A learning-focused CLI for inspecting repository structure and common engineering signals."
readme = "README.md"
requires-python = ">=3.9"

[project.scripts]
repo-lens = "repolens.cli.app:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
